chore: remove unused files

--- a/package.json
+++ b/package.json
@@ -4,37 +4,13 @@
   "description": "",
   "main": "start.js",
   "scripts": {
-    "start": "node --use_strict start.js",
-    "unittest": "./node_modules/.bin/mocha --compilers js:babel-core/register --recursive test",
+    "start": "node --use_strict src/server.js",
     "test": "npm run lint",
-    "coverage": "./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha -- -R spec --compilers js:babel-core/register --recursive test",
-    "webpack": "webpack --progress --colors",
-    "webpack-cron-maps": "webpack --progress --colors",
-    "webpack-cron-image": "webpack --progress --colors",
-    "webpack-cron-description": "webpack --progress --colors",
-    "webpack-cron-facebook": "webpack --progress --colors",
-    "webpack-cron-foursquare": "webpack --progress --colors",
-    "webpack-cron-weight": "webpack --progress --colors",
-    "webpack-cron-yelp": "webpack --progress --colors",
-    "webpack-cron-ganalytics": "webpack --progress --colors",
     "dev": "nodemon src/server.js",
-    "cron-maps": "node build/cronMaps.js",
-    "cron-maps-all": "npm run cron-maps -- -t restaurant -s nearby && npm run cron-maps -- -t restaurant -s places && npm run cron-maps -- -t bar -s nearby && npm run cron-maps -- -t bar -s places && npm run cron-maps -- -t cafe -s nearby && npm run cron-maps -- -t cafe -s places",
-    "cron-image": "node build/cronImage.js",
-    "cron-description": "node build/cronDescription",
-    "cron-facebook": "node build/cronFacebook",
-    "cron-foursquare": "node build/cronFoursquare",
-    "cron-weight": "node build/cronWeight",
-    "cron-yelp": "node build/cronYelp",
-    "cron-ganalytics": "node build/cronGanalytics",
     "lint": "./node_modules/.bin/eslint .",
-    "build:all": "babel src -d dist",
-    "build": "npm run webpack && npm run webpack-cron-maps && npm run webpack-cron-facebook && npm run webpack-cron-foursquare && npm run webpack-cron-yelp && npm run webpack-cron-weight && npm run webpack-cron-ganalytics",
     "docker:build": "npm run build && docker build -t garciadiazjaime/api-directory .",
-    "docker:run": "docker run -d -p 49192:3030 --link mongo -e='DB_URL=mongodb://mongo/gcenter' --name=api-directory garciadiazjaime/api-directory",
     "docker:push": "docker push garciadiazjaime/api-directory",
-    "docker:pull": "docker pull garciadiazjaime/api-directory",
-    "export:places": "node dist/scripts/exportPlaces.js"
+    "deploy": "npm run docker:push && echo 'docker pull garciadiazjaime/api-directory'"
   },
   "keywords": [],
   "author": "",
